# JSON-Processor

./: CMakeLists.txt
.github/classroom/: autograding.json
Resources/: sammy.json  test.json
Source/: AutoGrader.cpp  JSONParser.cpp  JSONParser.h  Model.cpp  Model.h  main.cpp
Tests/: NoFilterTest.txt
